--- a/professor/cursos/turmas/grupo/index.html
+++ b/professor/cursos/turmas/grupo/index.html
@@ -91,27 +91,18 @@
     <div class="grupo">
         <div class="tema">
             <h1>Tema do projeto:</h1>
-            <input type="text" id="inputTemaProjetoGrupo" value="Sistema para Gerenciamento de Trabalhos de Conclusão de Curso" required maxlength="255">
+            <input type="text" id="inputTemaProjetoGrupo" required maxlength="255">
         </div>
 
         <div class="descricao">
             <h1>Descrição do projeto:</h1>
-            <input type="text" id="textDescricaoProjetoGrupo" value="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt nisl velit, in dapibus lectus tristique vitae. Ut ut ullamcorper tortor. Nullam sed velit diam. Suspendisse vehicula lacinia fermentum. Sed non ultricies lacus." required>
+            <input type="text" id="textDescricaoProjetoGrupo" required>
         </div>
 
         <div class="cont-integrantes">
             <h1>Integrantes do grupo:</h1>
             <ul class="list-group ul-integrantes" id="listIntegrantesGrupo">
-                <li class="list-group-item li-integrantes">
-                    <button class="btnEditarAlunoGrupo" onclick="showModalEditarAluno()"><i
-                        class='bx bx-edit'></i></button>
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p id="nomeAlunoGrupo">NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
+                <!-- <li class="list-group-item li-integrantes">
                     <button class="btnEditarAlunoGrupo" onclick="showModalEditarAluno()"><i
                         class='bx bx-edit'></i></button>
                     <div class="integrantes">
@@ -320,7 +311,7 @@
                 </li>
                 <li class="list-group-item li-integrantes">
                     <button onclick="showModalCriarAlunoGrupo()" class="button5"> <i class="fa fa-plus" style="font-size:36px"></i></button>
-                </li>
+                </li> -->
             </ul>
         </div>
 
@@ -360,22 +351,25 @@
             </ul>
         </div>
 
+        <div class="data-hora">
+
         <div class="data-apresentacao">
             <h1>Data da apresentação:</h1>
-            <input type="date" id="inputDataApresentacaoProjetoGrupo" value="10/12/2016">
+            <input type="date" id="inputDataApresentacaoProjetoGrupo">
         </div>
 
         <div class="hora-apresentacao">
             <h1>Hora da apresentação:</h1>
-            <input type="time" id="inputHoraApresentacaoProjetoGrupo" value="07:30">
+            <input type="time" id="inputHoraApresentacaoProjetoGrupo">
+        </div>
+
         </div>
 
         <div class="barra_progresso">
             <label>Andamento do projeto:</label>
             <div class="progress">
-                <div class="progress-bar progress_bar" role="progressbar" style="width: 90%" aria-valuenow="25"
+                <div id="barraProgressoProjeto" class="progress-bar progress_bar" role="progressbar" aria-valuenow="25"
                     aria-valuemin="0" aria-valuemax="100">
-                    90%
                 </div>
             </div>
         </div>
