--- a/professor/cursos/turmas/grupo/index.html
+++ b/professor/cursos/turmas/grupo/index.html
@@ -319,8 +319,7 @@
             <h1>Orientadores do grupo:</h1>
             <ul class="list-group ul-orientadores" id="listProfessoresGrupo">
                 <li class="list-group-item li-orientadores">
-                    <button class="btnExcluirProfessor" onclick="showModalExcluirUsuarioGrupo()"><i
-                        class='bx bx-trash'></i></button>
+                    <button class="btnExcluirProfessor" onclick="showModalExcluirUsuarioGrupo()"><i class='bx bx-x'></i></button>
                     <div class="orientadores">
                         <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
@@ -328,8 +327,7 @@
                     <p id="nomeProfessorGrupo">NOME</p>
                 </li>
                 <li class="list-group-item li-orientadores">
-                    <button class="btnExcluirProfessor" onclick="showModalExcluirUsuarioGrupo()"><i
-                        class='bx bx-trash'></i></button>
+                    <button class="btnExcluirProfessor" onclick="showModalExcluirUsuarioGrupo()"><i class='bx bx-x'></i></button>
                     <div class="orientadores">
                         <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
@@ -337,8 +335,7 @@
                     <p id="nomeProfessorGrupo">NOME</p>
                 </li>
                 <li class="list-group-item li-orientadores">
-                    <button class="btnExcluirProfessor" onclick="showModalExcluirUsuarioGrupo()"><i
-                        class='bx bx-trash'></i></button>
+                    <button class="btnExcluirProfessor" onclick="showModalExcluirUsuarioGrupo()"><i class='bx bx-x'></i></button>
                     <div class="orientadores">
                         <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
                             data-width="80" data-height="80"></span>
@@ -389,40 +386,6 @@
     
     </div>
 
-    <div class="container mt-5 container modal modal-criar-aluno-grupo" id="modal-criar-aluno-grupo">
-        <h1>NOVO ALUNO NO GRUPO</h1>
-        <form class="row g-7">
-            <div class="col-md-12 lab-inp">
-                <label for="nome_novo_aluno_grupo" class="form-label">Nome:</label>
-                <input type="text" class="form-control nome_novo_aluno_grupo" id="inputNomeNovoAlunoGrupo" required maxlength="255">
-            </div>
-
-            <div class="col-md-12 lab-inp">
-                <label for="email_novo_aluno_grupo" class="form-label">Email:</label>
-                <input type="email" class="form-control email_novo_aluno_grupo" id="inputEmailNovoAlunoGrupo" required maxlength="255"/>
-            </div>
-
-            <div class="col-md-12 lab-inp">
-                <label for="senha" class="form-label">Senha:</label>
-                <input type="text" class="form-control senha" id="inputSenhaNovoAlunoGrupo" required maxlength="255"/>
-            </div>
-
-            <div class="buttons">
-                <div class="col-md-3">
-                    <button class="quinto_botao" type="button" onclick="exitModalCriarAlunoGrupo()">
-                        CANCELAR
-                    </button>
-                </div>
-
-                <div class="col-md-3">
-                    <button class="segundo_botao" type="submit">
-                        SALVAR
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
-
     <div class="container mt-5 container modal modal-add-professor-grupo" id="modal-add-professor-grupo">
         <h1>ADICIONAR PROFESSOR AO GRUPO</h1>
         <form class="row g-7">
@@ -471,51 +434,8 @@
     <div class="container mt-5 container modal modal-editar-aluno" id="modal-editar-aluno">
         <h1>EDITAR ALUNO</h1>
         <form class="row g-7">
-            <div class="col-md-6 lab-inp icon-edit">
-                <label for="nome_aluno_grupo" class="form-label">Nome:</label>
-                <input type="text" class="form-control nome_aluno_grupo" placeholder="João" id="inputNomeAlunoGrupoModalEditar" required maxlength="255">
-                <i class="fa fa-edit" style="font-size: 24px"></i>
-            </div>
 
-            <div class="col-md-6 lab-inp icon-edit">
-                <label for="email_usuario" class="form-label">Email:</label>
-                <input type="email" class="form-control email_aluno_grupo" placeholder="joao@gmail.com" id="inputEmailAlunoGrupoModalEditar" required maxlength="255"/>
-                <i class="fa fa-edit" style="font-size: 24px"></i>
-            </div>
-
-            <div class="col-md-6 lab-inp icon-edit">
-                <label for="senha" class="form-label">Senha:</label>
-                <input type="text" class="form-control senha" placeholder="4259" id="inputSenhaAlunoGrupoModalEditar" required maxlength="255"/>
-                <i class="fa fa-edit" style="font-size: 24px"></i>
-            </div>
-
-            <div class="col-md-6 lab-inp" id="curso-aluno-grupo">
-                <label for="tipo-select" class="form-label">Curso:</label>
-                <select class="form-select tipo-select" id="cursoAlunoGrupoModalEditar">
-                    <option value="Cambodia">Cambodia</option>
-                    <option value="Khmer">Khmer</option>
-                    <option value="Thiland">Thiland</option>
-                    <option value="Koren">Koren</option>
-                    <option value="China">China</option>
-                    <option value="English">English</option>
-                    <option value="USA">USA</option>
-                </select>
-            </div>
-
-            <div class="col-md-6 lab-inp" id="turma-aluno-grupo">
-                <label for="tipo-select" class="form-label">Turma:</label>
-                <select class="form-select tipo-select" id="turmaAlunoGrupoModalEditar">
-                    <option value="Cambodia">Cambodia</option>
-                    <option value="Khmer">Khmer</option>
-                    <option value="Thiland">Thiland</option>
-                    <option value="Koren">Koren</option>
-                    <option value="China">China</option>
-                    <option value="English">English</option>
-                    <option value="USA">USA</option>
-                </select>
-            </div>
-
-            <div class="col-md-6 lab-inp" id="grupo-aluno-grupo">
+            <div class="col-md-12 lab-inp" id="grupo-aluno-grupo">
                 <label for="tipo-select" class="form-label">Grupo:</label>
                 <select class="form-select tipo-select" id="grupoAlunoModalEditar">
                     <option value="Cambodia">Cambodia</option>
