colocando o ícone do nexus no title das páginas novas, arrumando tela de curso e modais da instituição

--- a/aluno/projeto_tcc/index.html
+++ b/aluno/projeto_tcc/index.html
@@ -133,7 +133,9 @@
                 
 
                 <div class="col-md-12 botoes">
-                    <button class="col-md-12 segundo_botao" type="button" id="btnVoltar">CANCELAR</button>
+                    <a href="../perfil/">
+                        <button class="col-md-12 segundo_botao" type="button" id="btnVoltar">CANCELAR</button>
+                    </a>
 
                     <button class="col-md-12 primeiro_botao" type="submit" id="btnSalvarAlteracoes" onclick="editarGrupo()">SALVAR
                         ALTERAÇÕES</button>
