--- a/aluno/relatorio_banca/disponivel/index.html
+++ b/aluno/relatorio_banca/disponivel/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="../../../home/images-global/logo-azul.svg" type="image/x-icon">
     <title>Relatório da banca</title>
 </head>
 
