arrumando o side menu da página do aluno

--- a/aluno/projeto_tcc/index.html
+++ b/aluno/projeto_tcc/index.html
@@ -48,20 +48,11 @@
             <span class="tooltip">Projeto</span>
         </li>
         <li>
-            <a href="../planner/index.html">
+            <a href="../tarefas/">
                 <i class='bx bx-task'></i>
                 <span class="links_name">Tarefas</span>
             </a>
             <span class="tooltip">Tarefas</span>
-        </li>
-        <li>
-
-        <li>
-            <a href="#">
-                <i class="bx bxs-graduation"></i>
-                <span class="links_name">Atividades</span>
-            </a>
-            <span class="tooltip">Atividades</span>
         </li>
         <li>
 
@@ -72,7 +63,7 @@
             <span class="tooltip">Arquivos</span>
         </li>
         <li>
-            <a href="#">
+            <a href="../relatorio_banca/disponivel/">
                 <i class="bx bx-edit"></i>
                 <span class="links_name">Relatório da banca</span>
             </a>
