--- a/aluno/perfil/editar/index.html
+++ b/aluno/perfil/editar/index.html
@@ -53,22 +53,13 @@
       <span class="tooltip">Projeto</span>
   </li>
   <li>
-      <a href="#">
+      <a href="../../tarefas/">
           <i class='bx bx-task' ></i>
           <span class="links_name">Tarefas</span>
       </a>
       <span class="tooltip">Tarefas</span>
   </li>
   <li>
-
-      <li>
-          <a href="#">
-              <i class="bx bxs-graduation"></i>
-              <span class="links_name">Atividades</span>
-          </a>
-          <span class="tooltip">Atividades</span>
-      </li>
-      <li>
 
       <a href="#">
           <i class="bx bx-folder-open"></i>
@@ -77,7 +68,7 @@
       <span class="tooltip">Arquivos</span>
   </li>
   <li>
-      <a href="#">
+      <a href="../../relatorio_banca/disponivel/">
           <i class="bx bx-edit"></i>
           <span class="links_name">Relatório da banca</span>
       </a>
