--- a/aluno/perfil/index.html
+++ b/aluno/perfil/index.html
@@ -60,15 +60,6 @@
     </li>
     <li>
 
-    <li>
-      <a href="#">
-        <i class="bx bxs-graduation"></i>
-        <span class="links_name">Atividades</span>
-      </a>
-      <span class="tooltip">Atividades</span>
-    </li>
-    <li>
-
       <a href="#">
         <i class="bx bx-folder-open"></i>
         <span class="links_name">Arquivos e links</span>
@@ -76,7 +67,7 @@
       <span class="tooltip">Arquivos</span>
     </li>
     <li>
-      <a href="#">
+      <a href="../relatorio_banca/disponivel/">
         <i class="bx bx-edit"></i>
         <span class="links_name">Relatório da banca</span>
       </a>
