side menu da página de tarefas comentado

--- a/aluno/tarefas/index.html
+++ b/aluno/tarefas/index.html
@@ -112,7 +112,7 @@
         </a>
     </header>
 
-    <div class="sidebar">
+    <!-- <div class="sidebar">
         <div class="logo-details">
           <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo" />
           <i class="bx bx-menu" id="btn"></i>
@@ -154,7 +154,7 @@
           </a>
           <span class="tooltip">Log Out</span>
         </li>
-      </div>
+      </div> -->
 
     <div class="container-geral">
 
