tentando arrumar botão de cancelar na página do projeto do aluno

--- a/aluno/projeto_tcc/index.html
+++ b/aluno/projeto_tcc/index.html
@@ -120,11 +120,10 @@
             </div>
 
             <div class="col-md-12 acoes-form-grupo">
-                    <button type="button" class="col-md-12 primeiro_botao" id="btnVerDocumentacao">VISUALIZAR ARQUIVO</button>
-                
+                <button type="button" class="col-md-12 primeiro_botao" id="btnVerDocumentacao">VISUALIZAR ARQUIVO</button>
 
                 <div class="col-md-12 botoes">
-                    <a href="../perfil/">
+                    <a id="linkBtnVoltar" href="../perfil/">
                         <button class="col-md-12 segundo_botao" type="button" id="btnVoltar">CANCELAR</button>
                     </a>
 
