Corrigindo Perguntas do Formulário

--- a/aluno/relatorio_banca/disponivel/index.html
+++ b/aluno/relatorio_banca/disponivel/index.html
@@ -81,7 +81,7 @@
 
     <div class="container">
         <div class="coninerCentralizado">
-            <div class="tipo_plano">
+            <div class="tipo_avaliador">
                 <ul>
                     <li data-tabs="mensal" class="ativo">AVALIADOR 1</li>
                     <li data-tabs="mensal">AVALIADOR 2</li>
@@ -100,15 +100,15 @@
                         <form class="formCampos" action="">
                             <p>CLAREZA</p>
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
                         </form>
                     </div>
@@ -117,15 +117,15 @@
                         <form class="formCampos" action="">
                             <p>OBJETIVIDADE</p>
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
                         </form>
                     </div>
@@ -134,50 +134,50 @@
                         <form class="formCampos" action="">
                             <p>FLUÊNCIA</p>
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
                         </form>
                     </div>
 
                     <div class="dominio">
                         <form class="formCampos" action="">
-                            <p>DOMINIO DO CONTEÚDO</p>
+                            <p>DOMÍNIO DO CONTEÚDO</p>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
                         </form>
                     </div>
 
                     <div class="capacidadeComunicar">
                         <form class="formCampos" action="">
-                            <p>CAPACIDADE DE SE COMUNICAR</p>
+                            <p>CAPACIDADE DE COMUNICAÇÃO</p>
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
                         </form>
                     </div>
@@ -186,15 +186,15 @@
                         <form class="formCampos" action="">
                             <p>ARGUMENTAÇÃO</p>
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
                         </form>
                     </div>
@@ -203,67 +203,67 @@
                         <form class="formCampos" action="">
                             <p>ORGANIZAÇÃO DA APRESENTAÇÃO</p>
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
                         </form>
                     </div>
 
                     <div class="recursosUtilizados">
                         <form class="formCampos" action="">
-                            <p>OS RECURSOS FORAM UTILIZADOS DE MANEIRA CORRETA?</p>
+                            <p>APROVEITAMENTO DOS RECURSOS</p>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
                         </form>
                     </div>
 
                     <div class="posturaIntegrantes">
                         <form action="" class="formCampos">
-                            <p>A POSTURA DOS INTEGRANTES FOI ADEQUADA?</p>
+                            <p>POSTURA DOS INTEGRANTES</p>
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
                         </form>
                     </div>
 
                     <div class="usoDoTempo">
                         <form class="formCampos" action="">
-                            <p>O USO DO TEMPO FOI ADEQUADO?</p>
+                            <p>USO DO TEMPO</p>
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" name="radio" />
+                                <input type="radio" disabled name="radio" />
                             </label>
                         </form>
                     </div>
