--- a/aluno/projeto_tcc/index.html
+++ b/aluno/projeto_tcc/index.html
@@ -81,13 +81,13 @@
     <div class="grupo">
         <div class="tema">
             <h1>Tema do projeto:</h1>
-            <input type="text" name="tema_projeto" id="p_tema_projeto">
+            <input type="text" name="tema_projeto" id="p_tema_projeto" required>
         </div>
 
         <div class="descricao">
             <h1>Descrição do projeto:</h1>
             <div contentEditable="true">
-                <input type="text" name="tema_projeto" id="p_descricao_projeto">
+                <input type="text" name="tema_projeto" id="p_descricao_projeto" required>
             </div>
         </div>
 
@@ -110,26 +110,15 @@
             <div class="progress">
                 <p id="empty_progress_bar">nenhuma tarefa registrada*</p>
                 <div id="progress-bar" class="progress-bar progress_bar" role="progressbar" aria-valuenow="25"
-                    aria-valuemin="0" aria-valuemax="100"></div>
+                    aria-valuemin="0" aria-valuemax="100" ></div>
             </div>
         </div>
 
-        <div class="col-md-10 something">
-            <div class="documentacao">
-                <label>Documentação do projeto:</label>
-            </div>
-
             <div class="col-md-12 acoes-form-grupo">
-                <button type="button" class="col-md-12 primeiro_botao" id="btnVerDocumentacao">VISUALIZAR ARQUIVO</button>
-
-                <div class="col-md-12 botoes">
-                    <a id="linkBtnVoltar" href="../perfil/">
-                        <button class="col-md-12 segundo_botao" type="button" id="btnVoltar">CANCELAR</button>
-                    </a>
-
-                    <button class="col-md-12 primeiro_botao" type="submit" id="btnSalvarAlteracoes" onclick="editarGrupo()">SALVAR
-                        ALTERAÇÕES</button>
-                </div>
+                <button class="col-md-12 primeiro_botao" type="submit" id="btnSalvarAlteracoes" onclick="editarGrupo()">
+                    SALVAR ALTERAÇÕES
+                </button>
+            </div>
 
             </div>
         </div>
