instituição não pode editar o grupo

--- a/instituicao/cursos/turmas/grupo/index.html
+++ b/instituicao/cursos/turmas/grupo/index.html
@@ -95,7 +95,7 @@
 
         <div class="descricao">
             <h1>Descrição do projeto:</h1>
-            <div contenteditable="true">
+            <div>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
                     tincidunt nisl velit, in dapibus lectus tristique vitae. Ut ut
