--- a/instituicao/cursos/turmas/grupo/index.html
+++ b/instituicao/cursos/turmas/grupo/index.html
@@ -90,238 +90,50 @@
     <div class="grupo" id="grupo">
         <div class="tema">
             <h1>Tema do projeto:</h1>
-            <p>Sistema para gerenciamento de Trabalho de Conclusão de Curso</p>
+            <p id="temaProjeto"></p>
         </div>
 
         <div class="descricao">
             <h1>Descrição do projeto:</h1>
             <div>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
-                    tincidunt nisl velit, in dapibus lectus tristique vitae. Ut ut
-                    ullamcorper tortor. Nullam sed velit diam. Suspendisse vehicula
-                    lacinia fermentum. Sed non ultricies lacus.
-                </p>
+                <p id="descricaoProjeto"></p>
             </div>
         </div>
 
         <div class="cont-integrantes">
             <h1>Integrantes do grupo:</h1>
-            <ul class="list-group ul-integrantes">
+            <ul class="list-group ul-integrantes" id="listIntegrantesGrupo">
                 <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
             </ul>
         </div>
 
         <div class="cont-orientadores">
             <h1>Orientadores do grupo:</h1>
-            <ul class="list-group ul-orientadores">
+            <ul class="list-group ul-orientadores" id="listProfessoresGrupo">
                 <li class="list-group-item li-orientadores">
-                    <div class="orientadores">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-orientadores">
-                    <div class="orientadores">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-orientadores">
-                    <div class="orientadores">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
             </ul>
+        </div>
+
+        <div class="data-hora">
+
+            <div class="data-apresentacao">
+                <h1>Data da apresentação:</h1>
+                <input type="date" id="inputDataApresentacaoProjeto">
+            </div>
+
+            <div class="hora-apresentacao">
+                <h1>Hora da apresentação:</h1>
+                <input type="time" id="inputHoraApresentacaoProjeto">
+            </div>
+
         </div>
 
         <div class="barra_progresso">
             <label>Andamento do projeto:</label>
             <div class="progress">
-                <div class="progress-bar progress_bar" role="progressbar" style="width: 90%" aria-valuenow="25"
-                    aria-valuemin="0" aria-valuemax="100">
-                    90%
+                <div id="barraProgressoProjeto" class="progress-bar progress_bar" role="progressbar"
+                    aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
                 </div>
-            </div>
-        </div>
-
-        <div class="col-md-3 documentacao_div">
-            <div class="documentacao">
-                <label>Documentação do projeto:</label>
-                <a href=""><button type="button" class="primeiro_botao">
-                        VISUALIZAR PDF
-                    </button></a>
             </div>
         </div>
     </div>
