--- a/aluno/projeto_tcc/index.html
+++ b/aluno/projeto_tcc/index.html
@@ -26,7 +26,7 @@
     <header>
         <div class="primeira_parte">
             <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
-            <h1 id="nomeAluno">NOME DO GRUPO</h1>
+            <h1 id="nomeAluno"></h1>
         </div>
 
         <a href="../perfil/index.html">
@@ -81,47 +81,57 @@
     <div class="grupo">
         <div class="tema">
             <h1>Tema do projeto:</h1>
-            <input type="text" name="tema_projeto" id="p_tema_projeto" required>
+            <input type="text" name="tema_projeto" id="inputTemaProjetoGrupo" required maxlength="255">
         </div>
 
         <div class="descricao">
             <h1>Descrição do projeto:</h1>
-            <div contentEditable="true">
-                <input type="text" name="tema_projeto" id="p_descricao_projeto" required>
+            <div>
+                <input type="text" name="tema_projeto" id="textDescricaoProjetoGrupo" required>
             </div>
         </div>
 
         <div class="cont-integrantes">
             <h1>Integrantes do grupo:</h1>
-            <ul id="ul_integrantes" class="list-group ul-integrantes">
+            <ul id="listIntegrantesGrupo" class="list-group ul-integrantes">
                 <li class="list-group-item li-integrantes">
             </ul>
         </div>
 
         <div class="cont-orientadores">
             <h1>Orientadores do grupo:</h1>
-            <ul id="ul_professores" class=" list-group ul-orientadores">
+            <ul id="listProfessoresGrupo" class=" list-group ul-orientadores">
                 <li class="list-group-item li-orientadores">
             </ul>
+        </div>
+
+        <div class="data-hora">
+
+            <div class="data-apresentacao">
+                <h1>Data da apresentação:</h1>
+                <input type="date" id="inputDataApresentacaoProjetoGrupo">
+            </div>
+
+            <div class="hora-apresentacao">
+                <h1>Hora da apresentação:</h1>
+                <input type="time" id="inputHoraApresentacaoProjetoGrupo">
+            </div>
+
         </div>
 
         <div class="barra_progresso">
             <label>Andamento do projeto:</label>
             <div class="progress">
-                <p id="empty_progress_bar">nenhuma tarefa registrada*</p>
-                <div id="progress-bar" class="progress-bar progress_bar" role="progressbar" aria-valuenow="25"
-                    aria-valuemin="0" aria-valuemax="100" ></div>
+                <div id="barraProgressoProjeto" class="progress-bar progress_bar" role="progressbar"
+                    aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                </div>
             </div>
         </div>
 
-        <div class="col-md-12 acoes-form-grupo">
-            <button class="col-md-12 primeiro_botao" type="submit" id="btnSalvarAlteracoes" onclick="editarGrupo()">
-                SALVAR ALTERAÇÕES
-            </button>
+        <div class="acoes-form-grupo">
+            <button class="primeiro_botao" type="submit" id="btnSalvarAlteracoes">SALVAR ALTERAÇÕES</button>
         </div>
 
-            </div>
-        </div>
     </div>
 
     <script>
