arrumando modal de usuário e de criação de grupo na visão do professor

--- a/professor/cursos/turmas/index.html
+++ b/professor/cursos/turmas/index.html
@@ -342,7 +342,7 @@
 
     <div class="container mt-5 container modal modal-criar-grupo" id="modal-criar-grupo">
         <h1>CRIAR GRUPO</h1>
-        <form class="row g-7">
+        <form class="row g-7 form-criar-grupo">
 
             <div class="col-md-6 lab-inp">
                 <label for="nomeNovoGrupo" class="form-label">Nome:</label>
