--- a/aluno/relatorio_banca/disponivel/index.html
+++ b/aluno/relatorio_banca/disponivel/index.html
@@ -28,11 +28,11 @@
     <header>
         <div class="primeira_parte">
             <img src="../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
-            <h1 id="nomeAluno"></h1>
+            <h1 id="nomeGrupoAluno">NOME DO GRUPO</h1>
         </div>
 
-        <a href="../../perfil/">
-            <img id="iconePerfilAluno" src="../../componentes/header/img/foto_padrao.svg" alt="foto" />
+        <a href="#">
+            <img id="fotoPerfilAluno" src="../../componentes/header/img/foto_padrao.svg" alt="foto" />
         </a>
     </header>
 
