--- a/home/produto/index.html
+++ b/home/produto/index.html
@@ -41,14 +41,14 @@
         </nav>
     </header>
     <main>
-        <div>
+        <div class="div1">
             <div>
                 <h1>Nexus Insights</h1>
                 <h2>Você tem um problema? Nós temos uma solução.</h2>
             </div>
             <img src="./img/computador.svg" alt="">
         </div>
-        <div>
+        <div class="div2">
             <div>
                 <h1>O que fazemos?</h1>
                 <h2>Que tal uma solução confiavel, simples e inovadora para os seus problemas? Nós da Nexus Insights
@@ -61,7 +61,7 @@
             </div>
             <img src="./img/lousa.svg" alt="">
         </div>
-        <div>
+        <div class="footer">
             <div>
                 <img src="./img/missao.svg" alt="">
                 <h1>Missão</h1>
