--- a/instituicao/index.html
+++ b/instituicao/index.html
@@ -137,19 +137,19 @@
     </div>
   </div>
 
-  <div class="container mt-5 container modal">
+  <div class="col-md-12 container mt-5 container modal">
     <div>
       <h1>DESEJA EXCLUIR ESSA CONTA?</h1>
       <h2>Lembre-se que essa é uma ação irreversível!</h2>
     </div>
 
-    <div>
+    <div class="col-md-12">
       <label for="senha-label" class="form-label">Insira sua senha para confirmar a ação:</label>
       <input type="password" id="senhaInstituicao" class="form-control senha-label">
       <p id="p-senha-incorreta">Senha Incorreta</p>
     </div>
 
-    <div class="buttons">
+    <div class="col-md-6 buttons">
       <button class="col-md-6" id="primeiro_botao_modal" onclick="exitModal()">CANCELAR</button>
       <button class="col-md-6" id="terceiro_botao" onclick="excluirConta()">CONFIRMAR</button>
     </div>
