--- a/home/produto/index.html
+++ b/home/produto/index.html
@@ -42,14 +42,14 @@
     </header>
     <main>
         <div class="div1">
-            <div>
+            <div class="textDiv1">
                 <h1>Nexus Insights</h1>
                 <h2>Você tem um problema? Nós temos uma solução.</h2>
             </div>
-            <img src="./img/computador.svg" alt="">
+            <img src="./img/Captura_de_Tela_2022-05-23_às_11.13.24-removebg-preview.png" alt="">
         </div>
         <div class="div2">
-            <div>
+            <div class="textDiv2">
                 <h1>O que fazemos?</h1>
                 <h2>Que tal uma solução confiavel, simples e inovadora para os seus problemas? Nós da Nexus Insights
                     vamos solucionar os desafios do seu dia a dia atravéz da tecnologia, prezando pela qualidade e pelo
@@ -62,20 +62,22 @@
             <img src="./img/lousa.svg" alt="">
         </div>
         <div class="footer">
-            <div>
+            <div class="missao">
                 <img src="./img/missao.svg" alt="">
                 <h1>Missão</h1>
                 <p>Tendo em vista o contexto pandêmico e a alta demanda por sistemas dinâmicos e eficientes, visa-se
                     oferecer ao cliente soluções inovadoras aliando-o ao uso da tecnologia, além de proporcionar a
                     melhor experiência ao usuário. </p>
             </div>
-            <div>
+            
+            <div class="visao">
                 <img src="./img/visao.svg" alt="">
                 <h1>Visão</h1>
                 <p>A Nexus Insights visa se tornar referência no uso da tecnologia para a resolução de problemas
                     cotidianos. </p>
             </div>
-            <div>
+            
+            <div class="valores">
                 <img src="./img/valores.svg" alt="">
                 <h1>Valores</h1>
                 <p>Os princípios da empresa relacionam-se a inovação e qualidade nas soluções, comprometimento com os
